test_outputs/connlist/udn_test_4_tcp-8080_explain_output.txt

#########################################################
# Specific connections and their reasons in pod-network #
#########################################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255[External] => bar/mybar[Pod]:

Allowed connections:
	Allowed TCP:[8080] due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255[External] => default/app-1[Pod]:

Allowed connections:
	Allowed TCP:[8080] due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between bar/mybar[Pod] => 0.0.0.0-255.255.255.255[External]:

Allowed connections:
	Allowed TCP:[8080] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'bar/egress-to-whole-world' allows connections by Egress rule #1
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between bar/mybar[Pod] => default/app-1[Pod]:

Allowed connections:
	Allowed TCP:[8080] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'bar/egress-to-whole-world' allows connections by Egress rule #1
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/app-1[Pod] => 0.0.0.0-255.255.255.255[External]:

Allowed connections:
	Allowed TCP:[8080] due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/app-1[Pod] => bar/mybar[Pod]:

Allowed connections:
	Allowed TCP:[8080] due to the system default (Allow all)


########################################################
# Specific connections and their reasons in green[udn] #
########################################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255[External] => green[udn]/webserver-2[Pod]:

Denied connections:
	Denied TCP:[8080] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/webserver-2[Pod], and Ingress rule #1 selects 0.0.0.0-255.255.255.255[External], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255[External] => green[udn]/webserver[Pod]:

Denied connections:
	Denied TCP:[8080] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/webserver[Pod], and Ingress rule #1 selects 0.0.0.0-255.255.255.255[External], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between bar/mybar[Pod] => green[udn]/webserver-2[Pod]:

Denied connections:
	Denied TCP:[8080] due to existence of user defined networks:
		Egress 
			UserDefinedNetwork 'green' isolates green[udn]/webserver-2[Pod]
		Ingress 
			UserDefinedNetwork 'green' isolates green[udn]/webserver-2[Pod]

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between bar/mybar[Pod] => green[udn]/webserver[Pod]:

Denied connections:
	Denied TCP:[8080] due to existence of user defined networks:
		Egress 
			UserDefinedNetwork 'green' isolates green[udn]/webserver[Pod]
		Ingress 
			UserDefinedNetwork 'green' isolates green[udn]/webserver[Pod]

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/app-1[Pod] => green[udn]/webserver-2[Pod]:

Denied connections:
	Denied TCP:[8080] due to existence of user defined networks:
		Egress 
			UserDefinedNetwork 'green' isolates green[udn]/webserver-2[Pod]
		Ingress 
			UserDefinedNetwork 'green' isolates green[udn]/webserver-2[Pod]

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/app-1[Pod] => green[udn]/webserver[Pod]:

Denied connections:
	Denied TCP:[8080] due to existence of user defined networks:
		Egress 
			UserDefinedNetwork 'green' isolates green[udn]/webserver[Pod]
		Ingress 
			UserDefinedNetwork 'green' isolates green[udn]/webserver[Pod]

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green[udn]/webserver-2[Pod] => 0.0.0.0-255.255.255.255[External]:

Allowed connections:
	Allowed TCP:[8080] due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green[udn]/webserver-2[Pod] => bar/mybar[Pod]:

Denied connections:
	Denied TCP:[8080] due to existence of user defined networks:
		Egress 
			UserDefinedNetwork 'green' isolates green[udn]/webserver-2[Pod]
		Ingress 
			UserDefinedNetwork 'green' isolates green[udn]/webserver-2[Pod]

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green[udn]/webserver-2[Pod] => default/app-1[Pod]:

Denied connections:
	Denied TCP:[8080] due to existence of user defined networks:
		Egress 
			UserDefinedNetwork 'green' isolates green[udn]/webserver-2[Pod]
		Ingress 
			UserDefinedNetwork 'green' isolates green[udn]/webserver-2[Pod]

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green[udn]/webserver-2[Pod] => green[udn]/webserver[Pod]:

Denied connections:
	Denied TCP:[8080] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/webserver[Pod], and Ingress rule #1 selects green[udn]/webserver-2[Pod], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green[udn]/webserver[Pod] => 0.0.0.0-255.255.255.255[External]:

Allowed connections:
	Allowed TCP:[8080] due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green[udn]/webserver[Pod] => bar/mybar[Pod]:

Denied connections:
	Denied TCP:[8080] due to existence of user defined networks:
		Egress 
			UserDefinedNetwork 'green' isolates green[udn]/webserver[Pod]
		Ingress 
			UserDefinedNetwork 'green' isolates green[udn]/webserver[Pod]

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green[udn]/webserver[Pod] => default/app-1[Pod]:

Denied connections:
	Denied TCP:[8080] due to existence of user defined networks:
		Egress 
			UserDefinedNetwork 'green' isolates green[udn]/webserver[Pod]
		Ingress 
			UserDefinedNetwork 'green' isolates green[udn]/webserver[Pod]

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green[udn]/webserver[Pod] => green[udn]/webserver-2[Pod]:

Denied connections:
	Denied TCP:[8080] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/webserver-2[Pod], and Ingress rule #1 selects green[udn]/webserver[Pod], but the protocols and ports do not match
